assets/css/style.scss
---
---

@import
  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
  "minima/initialize";

.contact-list {
    margin: 0;
}

.social-media-list {
    margin: 0 0 0 auto;
}

.post-list-narrow > li {
    margin-bottom: $spacing-unit * 0.5;
}

.post-list-separator {
    color: $lm-border-color-01;
    background-color: $lm-border-color-01;
    border: none;
    height: 1px;
}

.post-meta > a {
    color: inherit;
}

.figure {
    margin: 2em auto;
}

img.figure {
    display: block;
}

.figure + em, .figcaption {
    display: block;
    margin: -1.5em auto 2em;
    text-align: center;
    color: $lm-brand-color-dark;
}

.imgrow {
    img {
        height: 200px;
    }

    th {
        display: none;
    }

    td {
        padding: 10px;

        img {
            padding: 0px 10px;
        }
    }
}

.tierlist {
    th:nth-child(1) {
        background: #F08080;
    }

    td:nth-child(1) {
        font-weight: bold;
        width: 20px;
    }

    td:nth-child(2), th:nth-child(2) {
        padding: 5px;
    }
    
    tr:nth-child(1) > td:nth-child(1) {
        background: #FFA07A;
    }
    
    tr:nth-child(2) > td:nth-child(1) {
        background: #FAFAD2;
    }

    tr:nth-child(3) > td:nth-child(1) {
        background: #90EE90;
    }

    tr:nth-child(4) > td:nth-child(1) {
        background: #20B2AA;
    }
    
    tr:nth-child(5) > td:nth-child(1) {
        background: #7B68EE;
    }
    
    th:nth-child(2) {
        background: #FFFFFF;
    }
    
    tr:nth-child(odd) > td:nth-child(2) {
        background: #F6F8FA;
    }
    
    tr:nth-child(even) > td:nth-child(2) {
        background: #FFFFFF;
    }

    img {
        height: 100px;
    }
}

